Narrowed login box, should help fix problems on narrow displays.

--- a/themes/townsquare/css/style.less
+++ b/themes/townsquare/css/style.less
@@ -423,7 +423,7 @@ table {
       margin-top: 4px;
       #login-meta {
         .box;
-        width: 320px;
+        width: 220px;
         font-size: 12px !important;
         line-height: 1;
         .login-username {
